--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,49 +1,80 @@
- <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Service</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Prices</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
+    <div class="container">
 
-    <footer>
-        <div class="container">
-            <div class="row">
+        <div class="row">
+            <div class="box">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Tax Firm 2017</p>
+                    <div id="carousel-example-generic" class="carousel slide">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators hidden-xs">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="img-responsive img-full" src="https://wcrates.files.wordpress.com/2015/03/san-francisco-city-at-night-wallpaper.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="http://www.hdwallpaper.nu/wp-content/uploads/2015/05/Different_Perspectives_of_SF.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="http://cdn.pcwallart.com/images/san-francisco-skyline-golden-gate-wallpaper-3.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                            <span class="icon-prev"></span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                            <span class="icon-next"></span>
+                        </a>
+                    </div>
+                    <h2 class="brand-before">
+                        <small>Welcome to</small>
+                    </h2>
+                    <h1 class="brand-name">ABC Tax Firm</h1>
+                    <hr class="tagline-divider">
+                    <h2>
+                        <small>Serving the
+                            <strong>San Francisco Bay Area</strong>
+                        </small>
+                    </h2>
                 </div>
             </div>
         </div>
-    </footer>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
-    </nav>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">WHAT MAKES US
+                        <strong>DIFFERENT</strong>
+                    </h2>
+                    <hr>
+                    <img class="img-responsive img-border img-left" src="https://blackrockdigital.github.io/startbootstrap-business-casual/img/intro-pic.jpg" alt="">
+                    <hr class="visible-xs">
+                    <p>At Cook & Company, we focus exclusively on working with nonprofit organizations. We provide friendly, exceptional service at reasonable rates.</p>
+                    <p>We understand that many small and medium-sized nonprofit organizations do not always have professional accountants on staff, and we take pride in our ability to work effectively with managers, staff, and board members at varying levels of financial expertise.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"><strong>SUSTAINABLE</strong>
+                        ACCOUNTING
+                    </h2>
+                    <hr>
+                    <p>We are proud to be one of the few Green Certified CPA firms under the California Green Business Program.</p>
+                    <p>Since opening our doors in 2011, we have adopted various cutting edge technologies to enhance our services and reduce our carbon footprint.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
