Fix links on navigation bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,19 +38,22 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">ABC Tax Firm</a>
+                <a class="navbar-brand" href="/">ABC Tax Firm</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/about/index">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Service</a>
+                        <a href="/services/index">Service</a>
                     </li>
                     <li>
-                        <a href="contact.html">Prices</a>
+                        <a href="/prices/index">Prices</a>
+                    </li>
+                    <li>
+                        <a href="/contact/index">Contact</a>
                     </li>
                 </ul>
             </div>
