Add contact page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                         <a href="/about/index">About</a>
                     </li>
                     <li>
-                        <a href="/services/index">Service</a>
+                        <a href="/services/index">Services</a>
                     </li>
                     <li>
                         <a href="/prices/index">Prices</a>
