--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,67 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">About
+                        <strong>ABC Tax Firm</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <p>Cook & Company is a California CPA firm dedicated to delivering high quality public accounting services to small and medium-sized 501(c)(3) nonprofit organizations. Our specialties include attestation engagements (audits and reviews) and nonprofit tax/compliance services. We are also available for accounting/bookkeeping services and special projects.</p>
+
+                    <p>Our experience includes working with a diverse variety of nonprofits, including:</p>
+                      <ul>
+                        <li>advocacy groups</li>
+                        <li>arts organizations</li>
+                        <li>churches</li>
+                        <li>community agencies</li>
+                        <li>environmental organizations</li>
+                        <li>grantmaking organizations / foundations</li>
+                        <li>health & human services providers</li>
+                        <li>public interest law firms</li>
+                        <li>research/policy institutes</li>
+                        <li>schools</li>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Colin Ma
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
