Add header and Home link to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Taxpage</title>
+    <title>ABC Tax Firm</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -26,6 +26,9 @@
   </head>
 
   <body>
+  <div class="brand">ABC Tax Firm</div>
+    <div class="address-bar">765 8th Avenue | San Francisco, CA 94118 | 415.678.9012</div>
+
      <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -43,6 +46,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
                     <li>
                         <a href="/about/index">About</a>
                     </li>
