Replace text with Lorem

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,10 +55,9 @@
                         <strong>DIFFERENT</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="https://blackrockdigital.github.io/startbootstrap-business-casual/img/intro-pic.jpg" alt="">
+                    <img class="img-responsive img-border img-left" src="https://www.anafortx47.com/wp-content/uploads/2016/08/taxes.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>At Cook & Company, we focus exclusively on working with nonprofit organizations. We provide friendly, exceptional service at reasonable rates.</p>
-                    <p>We understand that many small and medium-sized nonprofit organizations do not always have professional accountants on staff, and we take pride in our ability to work effectively with managers, staff, and board members at varying levels of financial expertise.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et semper nisi. Etiam pretium elit aliquam quam ornare porta. Maecenas hendrerit felis in eros dignissim, quis ullamcorper diam mattis. Proin dignissim augue vitae luctus interdum. Nam porttitor orci risus, at aliquet purus pharetra id. In hac habitasse platea dictumst. Pellentesque sit amet lacus mattis, vulputate elit non, accumsan dui. Suspendisse accumsan sapien enim, id ultricies diam accumsan vitae. Nunc varius porttitor aliquam. Sed dignissim lorem nec tellus euismod, vitae consectetur elit fringilla. Donec vehicula enim vel lectus pellentesque, quis scelerisque dui venenatis. Cras tristique rhoncus tellus vitae faucibus. Ut quis tincidunt enim. Suspendisse interdum nisl urna, nec eleifend elit pretium et. Sed lobortis ut quam et pharetra.</p>
                 </div>
             </div>
         </div>
@@ -71,8 +70,7 @@
                         ACCOUNTING
                     </h2>
                     <hr>
-                    <p>We are proud to be one of the few Green Certified CPA firms under the California Green Business Program.</p>
-                    <p>Since opening our doors in 2011, we have adopted various cutting edge technologies to enhance our services and reduce our carbon footprint.</p>
+                    <p>Fusce imperdiet felis in ante luctus consequat. Nulla at est accumsan metus feugiat euismod eget vitae dui. Sed eu nulla non risus porta ornare a non nulla. Vestibulum urna augue, vestibulum ut iaculis at, tristique sit amet nulla. Nunc volutpat pharetra justo, vel semper velit hendrerit nec. Aliquam sed diam eu purus hendrerit mattis in varius velit. Aliquam erat nibh, ultricies vitae fermentum ac, feugiat eget enim. Integer congue tempus metus eu euismod.</p>
                 </div>
             </div>
         </div>
