Change content to Lorem text

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -10,12 +10,12 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="http://si.wsj.net/public/resources/images/BN-NH523_Expat__J_20160329062200.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>Cook & Company is a California CPA firm dedicated to delivering high quality public accounting services to small and medium-sized 501(c)(3) nonprofit organizations. Our specialties include attestation engagements (audits and reviews) and nonprofit tax/compliance services. We are also available for accounting/bookkeeping services and special projects.</p>
+                    <p>Nunc eros mauris, cursus non bibendum vitae, gravida a purus. Praesent tempus, leo tempus porta sodales, mi libero faucibus metus, non volutpat nisi mauris non erat. Praesent mauris ex, suscipit et libero a, venenatis malesuada ipsum. Cras eget dignissim tortor. Pellentesque in nibh id tortor interdum rutrum. Donec nec elementum turpis. Maecenas mattis libero eget fermentum efficitur. Donec accumsan lacus at mollis sodales. Cras nisl est, pellentesque condimentum augue ut, hendrerit finibus sem.</p>
 
-                    <p>Our experience includes working with a diverse variety of nonprofits, including:</p>
+                    <p>Our experience includes:</p>
                       <ul>
                         <li>advocacy groups</li>
                         <li>arts organizations</li>
