--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,7 +8,7 @@
  */
 
 body {
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Lato, "Helvetica Neue",Helvetica,Arial,sans-serif, Josefin Slab;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -22,7 +22,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Amiko, "Helvetica Neue",Helvetica,Arial,sans-serif, Josefin Slab;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -121,7 +121,7 @@ footer p {
         padding: 30px 0 10px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: Amiko, "Helvetica Neue",Helvetica,Arial,sans-serif, "Josefin Slab";
         font-size: 5em;
         font-weight: 700;
         line-height: normal;
