Changed company name to simply Tax Firm

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,7 +36,7 @@
                     <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
-                    <h1 class="brand-name">ABC Tax Firm</h1>
+                    <h1 class="brand-name">Tax Firm</h1>
                     <hr class="tagline-divider">
                     <h2>
                         <small>Serving the
