--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">About
-                        <strong>ABC Tax Firm</strong>
+                        <strong>Tax Firm</strong>
                     </h2>
                     <hr>
                 </div>
