--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ABC Tax Firm</title>
+    <title>Tax Firm</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-  <div class="brand">ABC Tax Firm</div>
+  <div class="brand">Tax Firm</div>
     <div class="address-bar">765 8th Avenue | San Francisco, CA 94118 | 415.678.9012</div>
 
      <!-- Navigation -->
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="/">ABC Tax Firm</a>
+                <a class="navbar-brand" href="/">Tax Firm</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; ABC Tax Firm 2017</p>
+                    <p>Copyright &copy; Tax Firm 2017</p>
                 </div>
             </div>
         </div>
