Made nav bar sticky

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,12 @@
   </head>
 
   <body>
-  <div class="brand">Tax Firm</div>
-    <div class="address-bar">765 8th Avenue | San Francisco, CA 94118 | 415.678.9012</div>
+  <br>
+  <!-- <div class="brand">Tax Firm</div> -->
+    <!-- <div class="address-bar">765 8th Avenue | San Francisco, CA 94118 | 415.678.9012</div> -->
 
      <!-- Navigation -->
-    <nav class="navbar navbar-default box" role="navigation">
+    <nav class="navbar-fixed-top sticky navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
