--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,67 +1,33 @@
-<div class="container">
+<!-- Page Content -->
+    <div class="container">
 
+        <!-- Page Heading/Breadcrumbs -->
         <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>Tax Firm</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="http://si.wsj.net/public/resources/images/BN-NH523_Expat__J_20160329062200.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>Nunc eros mauris, cursus non bibendum vitae, gravida a purus. Praesent tempus, leo tempus porta sodales, mi libero faucibus metus, non volutpat nisi mauris non erat. Praesent mauris ex, suscipit et libero a, venenatis malesuada ipsum. Cras eget dignissim tortor. Pellentesque in nibh id tortor interdum rutrum. Donec nec elementum turpis. Maecenas mattis libero eget fermentum efficitur. Donec accumsan lacus at mollis sodales. Cras nisl est, pellentesque condimentum augue ut, hendrerit finibus sem.</p>
-
-                    <p>Our experience includes:</p>
-                      <ul>
-                        <li>advocacy groups</li>
-                        <li>arts organizations</li>
-                        <li>churches</li>
-                        <li>community agencies</li>
-                        <li>environmental organizations</li>
-                        <li>grantmaking organizations / foundations</li>
-                        <li>health & human services providers</li>
-                        <li>public interest law firms</li>
-                        <li>research/policy institutes</li>
-                        <li>schools</li>
-                </div>
-                <div class="clearfix"></div>
+            <div class="col-lg-12">
+                <h1 class="page-header">About
+                    <small>Subheading</small>
+                </h1>
+<!--                 <ol class="breadcrumb">
+                    <li><a href="/">Home</a>
+                    </li>
+                    <li class="active">About</li>
+                </ol> -->
             </div>
         </div>
+        <!-- /.row -->
 
+        <!-- Intro Content -->
         <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Colin Ma
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="clearfix"></div>
+            <div class="col-md-6">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </div>
+            <div class="col-md-6">
+                <h2>About Company</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
             </div>
         </div>
+        <!-- /.row -->
 
-    </div>
-    <!-- /.container -->
+        <hr>
