--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
     <meta name="author" content="">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+  <!--   <link href="https://fonts.googleapis.com/css?family=Lato:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Amiko:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
+ -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -31,7 +31,7 @@
     <!-- <div class="address-bar">765 8th Avenue | San Francisco, CA 94118 | 415.678.9012</div> -->
 
      <!-- Navigation -->
-    <nav class="navbar-fixed-top sticky navbar-default" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -41,26 +41,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="/">Tax Firm</a>
+                <a class="navbar-brand" href="/"><span style="color: #FF8C00; font-family: Amiko">Company Name</span></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/about/index">About</a>
+                        <a href="/about/index.html">About</a>
                     </li>
                     <li>
-                        <a href="/services/index">Services</a>
+                        <a href="/contact/index.html">Contact</a>
                     </li>
                     <li>
-                        <a href="/prices/index">Prices</a>
+                        <a href="/services/index.html">Services</a>
                     </li>
                     <li>
-                        <a href="/contact/index">Contact</a>
+                        <a href="/faq/index.html">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -69,25 +68,26 @@
         <!-- /.container -->
     </nav>
 
+
     <%= yield %>
 
 
-    <footer>
-        <div class="container">
+    <!-- Footer -->
+        <footer>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Tax Firm 2017</p>
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Company Name 2017</p>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
+    </div>
+    <!-- /.container -->
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
     })
     </script>
-
-  </body>
+</body>
 </html>
