--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,79 +1,125 @@
+<!-- Header Carousel -->
+    <header id="myCarousel" class="carousel slide">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <div class="fill" style="background-image:url('http://murphymeadow.com/26/photos-of-golden-gate-bridge-san-francisco-25.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 1</h2>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('http://www.mrwallpaper.com/wallpapers/hong-kong-colorfulness-1920x1080.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 2</h2>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('http://www.hdwallpaper.nu/wp-content/uploads/2015/05/Different_Perspectives_of_SF.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Caption 3</h2>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
+    </header>
+
+    <!-- Page Content -->
     <div class="container">
 
+        <!-- Marketing Icons Section -->
         <div class="row">
-            <div class="box">
-                <div class="col-lg-12 text-center">
-                    <h2 class="brand-before">
-                        <small>Welcome to</small>
-                    </h2>
-                    <h1 class="brand-name">Tax Firm</h1>
-                    <hr class="tagline-divider">
-                    <h2>
-                        <small>Serving the
-                            <strong>San Francisco Bay Area</strong>
-                        </small>
-                    </h2>
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators hidden-xs">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img class="img-responsive img-full" src="https://wcrates.files.wordpress.com/2015/03/san-francisco-city-at-night-wallpaper.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="http://www.hdwallpaper.nu/wp-content/uploads/2015/05/Different_Perspectives_of_SF.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="http://cdn.pcwallart.com/images/san-francisco-skyline-golden-gate-wallpaper-3.jpg" alt="">
-                            </div>
-                        </div>
-
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                            <span class="icon-prev"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                            <span class="icon-next"></span>
-                        </a>
+            <div class="col-lg-12">
+                <h1 class="page-header">
+                    Welcome to Company Name
+                </h1>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-money"></i> Box1</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <a href="#" class="btn btn-default">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-gift"></i> Box 2</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <a href="#" class="btn btn-default">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-compass"></i> Box 3</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- /.row -->
 
+        <!-- Features Section -->
         <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">WHAT MAKES US
-                        <strong>DIFFERENT</strong>
-                    </h2>
-                    <hr>
-                    <img class="img-responsive img-border img-left" src="https://www.anafortx47.com/wp-content/uploads/2016/08/taxes.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et semper nisi. Etiam pretium elit aliquam quam ornare porta. Maecenas hendrerit felis in eros dignissim, quis ullamcorper diam mattis. Proin dignissim augue vitae luctus interdum. Nam porttitor orci risus, at aliquet purus pharetra id. In hac habitasse platea dictumst. Pellentesque sit amet lacus mattis, vulputate elit non, accumsan dui. Suspendisse accumsan sapien enim, id ultricies diam accumsan vitae. Nunc varius porttitor aliquam. Sed dignissim lorem nec tellus euismod, vitae consectetur elit fringilla. Donec vehicula enim vel lectus pellentesque, quis scelerisque dui venenatis. Cras tristique rhoncus tellus vitae faucibus. Ut quis tincidunt enim. Suspendisse interdum nisl urna, nec eleifend elit pretium et. Sed lobortis ut quam et pharetra.</p>
-                </div>
+            <div class="col-lg-12">
+                <h2 class="page-header">Company Features</h2>
+            </div>
+            <div class="col-md-6">
+                <p>Content:</p>
+                <ul>
+                    <li><strong>Content</strong>
+                    </li>
+                    <li>Content</li>
+                    <li>Content</li>
+                    <li>Content</li>
+                    <li>Content</li>
+                    <li>Content</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+            </div>
+            <div class="col-md-6">
+                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
             </div>
         </div>
+        <!-- /.row -->
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"><strong>SUSTAINABLE</strong>
-                        ACCOUNTING
-                    </h2>
-                    <hr>
-                    <p>Fusce imperdiet felis in ante luctus consequat. Nulla at est accumsan metus feugiat euismod eget vitae dui. Sed eu nulla non risus porta ornare a non nulla. Vestibulum urna augue, vestibulum ut iaculis at, tristique sit amet nulla. Nunc volutpat pharetra justo, vel semper velit hendrerit nec. Aliquam sed diam eu purus hendrerit mattis in varius velit. Aliquam erat nibh, ultricies vitae fermentum ac, feugiat eget enim. Integer congue tempus metus eu euismod.</p>
+        <!-- <hr> -->
+
+        <!-- Button Section -->
+<!--         <div class="well">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+                </div>
+                <div class="col-md-4">
+                    <a class="btn btn-lg btn-default btn-block" href="#">Button for whatever</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-    </div>
-    <!-- /.container -->
+        <hr>
