--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('http://murphymeadow.com/26/photos-of-golden-gate-bridge-san-francisco-25.jpg');"></div>
+                <div class="fill" style="background-image:url('http://backwallpapers.com/wp-content/uploads/2016/08/Golden-Gate-Bridge-In-San-Francisco-HQ-Images-1080p.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
