Change fa icons to more business-like icons

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -32,7 +32,7 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
+                              <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
@@ -82,7 +82,7 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-bomb fa-stack-1x fa-inverse"></i>
+                              <i class="fa fa-handshake-o fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
@@ -108,7 +108,7 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-paper-plane fa-stack-1x fa-inverse"></i>
+                              <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
@@ -120,7 +120,7 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-space-shuttle fa-stack-1x fa-inverse"></i>
+                              <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
@@ -132,7 +132,7 @@
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
                               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                              <i class="fa fa-recycle fa-stack-1x fa-inverse"></i>
+                              <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
                     <div class="media-body">
