Remove social media icons

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -32,7 +32,7 @@
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-                <ul class="list-unstyled list-inline list-social-icons">
+<!--                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
@@ -45,7 +45,7 @@
                     <li>
                         <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
         <!-- /.row -->
