remove abbr from contact details

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -26,12 +26,12 @@
                     867 5th Avenue<br>San Francisco, CA 94118<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (415) 678-9012</p>
+                   <!--  <abbr title="Phone">P</abbr>: --> (415) 678-9012</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    <!-- <abbr title="Email">E</abbr>: --> <a href="mailto:name@example.com">name@example.com</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+                    <!-- <abbr title="Hours">H</abbr>: --> Monday - Friday: 9:00 AM to 5:00 PM</p>
 <!--                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
