Add orange icon class to service icons

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -31,7 +31,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -43,7 +43,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-car fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -55,7 +55,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-support fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -69,7 +69,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -81,7 +81,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-handshake-o fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -93,7 +93,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -107,7 +107,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -119,7 +119,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
@@ -131,7 +131,7 @@
                 <div class="media">
                     <div class="pull-left">
                         <span class="fa-stack fa-2x">
-                              <i class="fa fa-circle fa-stack-2x orange-button"></i>
+                              <i class="fa fa-circle fa-stack-2x orange-icon"></i>
                               <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
                         </span> 
                     </div>
