--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -19,3 +19,7 @@ header.carousel .fill {
     background-position: center;
     background-size: cover;
 }
+
+.panel-heading h4 {
+  color: #D06719;
+}
